# tcc_sfm

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  book_sfm.py  calibration.py  config.yaml  dense_optical_flow.py  main.py  playground.py  simple_pipeline.py  sparse_optical_flow.py  tcc_sfm.py
datasets/pasta_short/: 1080_30.m4v  480_30.m4v  480_60.m4v  720_30.m4v  720_60.m4v
doc/html/: ____init_____8py.html  annotated.html  bundle__adjustment_8py.html  classes.html  classpipeline_1_1config_1_1_bundle_adjustment_config-members.html  classpipeline_1_1config_1_1_bundle_adjustment_config.html  classpipeline_1_1config_1_1_case3_config.html  classpipeline_1_1config_1_1_corner_selection_config.html  classpipeline_1_1config_1_1_error_calculation_config.html  classpipeline_1_1config_1_1_five_point_algorithm_config-members.html  classpipeline_1_1config_1_1_five_point_algorithm_config.html  (+220 more)
doc/latex/: ____init_____8py.tex  (+111 more)
extra/: book_pipeline.cpp  book_sfm.py  dense_optical_flow.py  sparse_optical_flow.py
pipeline/: base_pipeline.py  bundle_adjuster.py  bundle_adjustment.py  config.py  errors.py  init_algorithms.py  playground.ipynb  playground.py  reconstruction_algorithms.py  simple_pipeline.py  synthetic_pipeline.py  synthetic_pipeline_mk1.py  synthetic_pipeline_mk2.py  synthetic_pipeline_mk3.py  tcc_sfm.py  utils.py  video_algorithms.py  video_pipeline.py  video_pipeline_mk1.py  video_pipeline_mk2.py  video_pipeline_mk3.py
run_scripts/: main.py  plot_ba_effect_synthetic_online.py  plot_stats.py
visualizer/: CMakeLists.txt  visualizer.cpp  visualizer.h
(+62 files in other folders)
